# PulseOS

./: .crates.toml  .crates2.json  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  add_apk_to_rootfs.sh  build_img.sh  patch_final.diff  rustfmt.toml
.agents/workflows/: wirte-commit.md
.cargo/: config.toml
.github/agents/: Reviewer.agent.md
.jules/: bolt.md
arceos/: Cargo.toml  rust-toolchain.toml
arceos/api/arceos_api/src/: lib.rs
arceos/api/arceos_posix_api/src/: lib.rs  utils.rs
arceos/api/arceos_posix_api/src/imp/: fd_ops.rs  fs.rs  io.rs  pipe.rs  time.rs
arceos/api/axfeat/: Cargo.toml
arceos/configs/: defconfig.toml
arceos/modules/axalloc/: Cargo.toml
arceos/modules/axalloc/src/: frameinfo.rs  lib.rs
arceos/modules/axdma/: Cargo.toml
arceos/modules/axdriver/: Cargo.toml
arceos/modules/axdriver/src/: virtio.rs
arceos/modules/axfs/: Cargo.toml
arceos/modules/axfs/src/: disk.rs  lib.rs  writeback.rs
arceos/modules/axfs/src/fs/: devfs.rs  loop_dev.rs  mod.rs  procfs.rs  tmpfs.rs
arceos/modules/axfs/src/fs/ext4/: fs.rs  inode.rs  mod.rs  util.rs
arceos/modules/axfs/src/fs/fat/: dir.rs  fs.rs  mod.rs
arceos/modules/axfs/src/highlevel/: file.rs  fs.rs
arceos/modules/axhal/: Cargo.toml  build.rs  linker.lds.S
arceos/modules/axhal/src/: lib.rs  paging.rs  time.rs
arceos/modules/axmm/: Cargo.toml
arceos/modules/axmm/src/: aspace.rs  frame_info.rs  frameinfo.rs  lib.rs
arceos/modules/axmm/src/backend/: alloc.rs  cow.rs  file.rs  mod.rs  shared.rs
arceos/modules/axnet/: Cargo.toml
arceos/modules/axnet/src/: lib.rs
arceos/modules/axnet/src/smoltcp_impl/: addr.rs  listen_table.rs  loopback.rs  mod.rs  tcp.rs  tcp.rs_partial  udp.rs
arceos/modules/axruntime/src/: lib.rs  vdso.rs
arceos/modules/axsync/: Cargo.toml
arceos/modules/axsync/src/: lib.rs  rwlock.rs
arceos/modules/axtask/: Cargo.toml
arceos/modules/axtask/src/: api.rs  lib.rs  run_queue.rs  task.rs  task_ext.rs  timers.rs  wait_queue.rs
arceos/scripts/make/: build.mk  cargo.mk  deps.mk
cargo/: config.toml
crates/allocator/src/: tlsf.rs
crates/axcpu/src/: trap.rs
crates/axfs-ng-vfs/: Cargo.toml
crates/axfs-ng-vfs/src/: fs.rs  inmem.rs  lib.rs  mount.rs
crates/axio/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
crates/axio/src/: lib.rs
crates/axplat-loongarch64-qemu-virt/: .cargo_vcs_info.json  axconfig.toml
crates/axplat-loongarch64-qemu-virt/src/: boot.rs  console.rs  init.rs  time.rs
crates/axplat-riscv64-qemu-virt/src/: time.rs
crates/axsched/: .cargo_vcs_info.json
crates/axsched/src/: cfs.rs  fifo.rs  lib.rs  round_robin.rs
crates/ext4_rs/: .cargo-checksum.json  Cargo.toml  Cargo.toml.orig  gen_img.sh  run.sh
crates/ext4_rs/src/: journal.rs  lib.rs  main.rs
crates/ext4plus/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
crates/ext4plus/src/: bitmap.rs  block_group.rs  block_size.rs  dir.rs  dir_block.rs  dir_entry.rs  dir_entry_hash.rs  dir_htree.rs  error.rs  extent.rs  features.rs  file.rs  file_type.rs  inode.rs  journal.rs  label.rs  lib.rs  mem_io_error.rs  metadata.rs  mmp.rs  path.rs  prelude.rs  reader.rs  resolve.rs  superblock.rs  sync.rs  test_util.rs  uuid.rs  writer.rs  xattr.rs
crates/memory_addr/: .cargo-checksum.json  Cargo.toml
crates/memory_set/: .cargo-checksum.json  .cargo_vcs_info.json
crates/page_table_entry/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
crates/page_table_multiarch/: Cargo.toml
crates/page_table_multiarch/src/: bits64.rs
crates/smoltcp/src/: lib.rs
crates/starry-vdso/src/: embed.rs  vdso.rs  vdso_time_data.rs
crates/virtio-drivers/src/: hal.rs  queue.rs
docs/: conf.typ  main.typ
docs/ai-logs/Reviewer/: TEMPLATE.md
docs/components/: cover.typ  figure.typ  outline.typ  typography.typ
docs/content/: conclusion.typ  filesystem.typ  general.typ  memory.typ  net.typ  signal.typ  thread.typ
plat/axplat-loongarch64-qemu-virt/: .cargo-checksum.json  Cargo.toml
plat/axplat-loongarch64-qemu-virt/src/: console.rs
pulse_core/: Cargo.toml
pulse_core/src/: config.rs  cpu_dma_latency.rs  fd_table.rs  flock.rs  lib.rs  string.rs  string_analyze.rs  sync.rs  trap.rs
pulse_core/src/fs/: mod.rs
pulse_core/src/ipc/: mod.rs  sem.rs  shm.rs
pulse_core/src/mm/: loader.rs  mod.rs
pulse_core/src/net/: mod.rs
pulse_core/src/task/: exec.rs  mod.rs  mod.rs.orig  process.rs  signal.rs  thread.rs  uaccess.rs
pulse_syscalls/: Cargo.toml
pulse_syscalls/src/: handler.rs  lib.rs  net.rs
pulse_syscalls/src/impls/: fs.rs  futex.rs  misc.rs  mm.rs  mod.rs  task.rs  time.rs  utils.rs
pulse_syscalls/src/impls/fs/: control.rs  cwd.rs  epoll.rs  fd.rs  io.rs  meta.rs  mod.rs  path.rs
pulse_syscalls/src/impls/fs/common/: constants.rs  fd.rs  mod.rs  path_resolve.rs  permission.rs
pulse_syscalls/src/impls/ipc/: mod.rs  sem.rs  shm.rs
pulse_syscalls/src/impls/net/: addr.rs  io.rs  mod.rs  name.rs  opt.rs  socket.rs
pulse_syscalls/src/impls/task/: clone.rs  common.rs  exec.rs  exit.rs  mod.rs  process.rs  schedule.rs  user.rs  wait.rs
records/: pulseos_allocator_comparison_report.md
records/ai-logs/Coder/: 2026-03-25_pulse_refactor.md  2026-04-02_cow_fork.md  2026-04-02_ls_bin_lazy_mmap_fix.md  2026-04-02_statx_ls_fix.md  2026-04-03_axfs_ext4_rs_migration.md  TEMPLATE.md  (+6 more)
records/logs/: 2026.3.24.md  2026.3.25.md  2026.3.28.md  2026.3.29.md  2026.3.30.md  2026.4.13.md  2026.4.14.md  2026.4.16.md  2026.4.19.md  2026.4.2.md  2026.4.21.md  2026.4.22.md  2026.4.26.md  2026.4.3.md  2026.4.5.md  2026.4.7.md  2026.5.2.md  2026.5.20.md  2026.5.21.md  2026.5.22.md  2026.5.24.md  2026.5.30.md  2026.5.31.md  2026.6.19.md  2026.6.22.md  2026.6.23.md
records/qperf-analyze/: Iozone Flamegrapg Analysis.md  cyclictest analyze1.md  result.folded  result.speedscope.json
rootfs/extras/: loongarch64.files  loongarch64.tar.xz  riscv64.files  riscv64.tar.xz
src/: auto_testcode_cmd.sh  main.rs  testcode_cmd.sh  testcode_cmd_la.sh  testcode_list.txt
starry-vdso/: .cargo-checksum.json  Cargo.toml
starry-vdso/src/: guard.rs  vdso.rs  vdso_time_data.rs
(+491 files in other folders)
