[workspace]

exclude = ["arceos", "vendor/axconfig-gen"]
members = ["pulse_core", "pulse_syscalls"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["muou000 <muou000@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/muou000/PulseOS"
repository = "https://github.com/muou000/PulseOS"

[workspace.dependencies]
axfeat = { path = "arceos/api/axfeat", features = [
    "alloc-slab",
    "multitask",
    "sched-rr",
    "fs",
    "paging",
    "irq"
    ] }

axconfig = { path = "arceos/modules/axconfig" }
axhal = { path = "arceos/modules/axhal", features = ["uspace", "fp-simd"] }
axlog = { path = "arceos/modules/axlog" }
axruntime = { path = "arceos/modules/axruntime" }

axtask = { path = "arceos/modules/axtask" }
axfs = { path = "arceos/modules/axfs" }
axerrno = "0.2"

axplat-riscv64-qemu-virt = "0.3.0"
axplat-loongarch64-qemu-virt = "0.3.0"

syscalls = { git = "https://github.com/muou000/syscalls.git", rev = "efac241", default-features = false }

[patch.crates-io]
axplat-loongarch64-qemu-virt = { path = "vendor/axplat-loongarch64-qemu-virt" }
axfs-ng-vfs = { path = "vendor/axfs-ng-vfs" }

[package]
name = "Pulse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
qemu = []
auto-testcode = []

[dependencies]
axlog.workspace = true
axruntime.workspace = true
axfeat.workspace = true
axtask.workspace = true
arceos_api = { path = "arceos/api/arceos_api", features = ["multitask"] }
pulse_syscalls = { path = "pulse_syscalls" }
pulse_core = { path = "pulse_core" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
axplat-riscv64-qemu-virt.workspace = true

[target.'cfg(target_arch = "loongarch64")'.dependencies]
axplat-loongarch64-qemu-virt.workspace = true
