[workspace]

exclude = ["arceos", "crates/axconfig-gen", "crates/ext4plus"]
members = ["pulse_core", "pulse_syscalls"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["muou000 <muou000@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/muou000/PulseOS"
repository = "https://github.com/muou000/PulseOS"

[workspace.dependencies]
axfeat = { path = "arceos/api/axfeat", features = [
    "alloc-tlsf",
    "page-alloc-4g",
    "multitask",
    "sched-rr",
    "fs",
    "rtc",
    "paging",
    "irq",
    "net",
] }

axconfig = { path = "arceos/modules/axconfig" }
axhal = { path = "arceos/modules/axhal", features = ["uspace", "fp-simd"] }
axlog = { path = "arceos/modules/axlog" }
axruntime = { path = "arceos/modules/axruntime" }
axnet = { path = "arceos/modules/axnet", features = ["monolithic"] }
axalloc = { path = "arceos/modules/axalloc" }
axtask = { path = "arceos/modules/axtask" }
axfs = { path = "arceos/modules/axfs", features = ["times"] }
axmm = { path = "arceos/modules/axmm" }
axerrno = "0.2"
axpoll = "0.3"

axplat-riscv64-qemu-virt = "0.3.0"
axplat-loongarch64-qemu-virt = "0.3.0"

syscalls = { version = "0.8", default-features = false }
linux-raw-sys = { version = "0.12", default-features = false, features = [
    "no_std",
    "general",
    "net",
    "ioctl",
    "loop_device",
] }
axio = { version = "0.3.0-pre.1", default-features = false, features = [
    "alloc",
] }
axfs-ng-vfs = "0.1.1"
linkme = "0.3"
memory_addr = "0.4"
bitflags = "2.11"
spin = "0.10"
kernel-elf-parser = "0.3"
xmas-elf = "0.9"
percpu = "0.2"
kernel_guard = "0.1"
rand = { version = "0.9.2", default-features = false }
rand_core = { version = "0.10.1", default-features = false }
rand_pcg = { version = "0.10.2", default-features = false }
chrono = { version = "0.4", default-features = false }

starry-vdso = { path = "crates/starry-vdso" }

[patch.crates-io]
axsched = { path = "crates/axsched" }
memory_set = { path = "crates/memory_set" }
memory_addr = { path = "crates/memory_addr" }
axfs-ng-vfs = { path = "crates/axfs-ng-vfs" }
axcpu = { path = "crates/axcpu" }
axplat-loongarch64-qemu-virt = { path = "crates/axplat-loongarch64-qemu-virt" }
axplat-riscv64-qemu-virt = { path = "crates/axplat-riscv64-qemu-virt" }
axio = { path = "crates/axio" }
virtio-drivers = { path = "crates/virtio-drivers" }
page_table_multiarch = { path = "crates/page_table_multiarch" }

[patch."https://github.com/arceos-org/allocator.git"]
allocator = { path = "crates/allocator" }

[package]
name = "Pulse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
qemu = []
testcode = []

[dependencies]
axhal.workspace = true
axlog.workspace = true
axruntime.workspace = true
axfeat.workspace = true
axtask.workspace = true
pulse_syscalls = { path = "pulse_syscalls" }
pulse_core = { path = "pulse_core" }
starry-vdso.workspace = true

[target.'cfg(target_arch = "riscv64")'.dependencies]
axplat-riscv64-qemu-virt.workspace = true

[target.'cfg(target_arch = "loongarch64")'.dependencies]
axplat-loongarch64-qemu-virt.workspace = true

[patch."https://github.com/rcore-os/smoltcp.git"]
smoltcp = { path = "crates/smoltcp" }
