[workspace]
resolver = "2"

members = [
    "modules/axalloc",
    "modules/axconfig",
    "modules/axdisplay",
    "modules/axdriver",
    "modules/axfs",
    "modules/axhal",
    "modules/axlog",
    "modules/axmm",
    "modules/axnet",
    "modules/axns",
    "modules/axruntime",
    "modules/axsync",
    "modules/axtask",
    "modules/axipi",

    "api/axfeat",
    "api/arceos_api",
    "api/arceos_posix_api",

    "ulib/axstd",
    "ulib/axlibc",

    "examples/helloworld",
    "examples/helloworld-myplat",
    "examples/httpclient",
    "examples/httpserver",
    "examples/shell",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/arceos"
repository = "https://github.com/arceos-org/arceos"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
axstd = { path = "ulib/axstd" }
axlibc = { path = "ulib/axlibc" }

arceos_api = { path = "api/arceos_api" }
arceos_posix_api = { path = "api/arceos_posix_api" }
axfeat = { path = "api/axfeat" }

axalloc = { path = "modules/axalloc" }
axconfig = { path = "modules/axconfig" }
axdisplay = { path = "modules/axdisplay" }
axdriver = { path = "modules/axdriver" }
axfs = { path = "modules/axfs" }
axhal = { path = "modules/axhal" }
axlog = { path = "modules/axlog" }
axmm = { path = "modules/axmm" }
axnet = { path = "modules/axnet" }
axns = { path = "modules/axns" }
axruntime = { path = "modules/axruntime" }
axsync = { path = "modules/axsync" }
axtask = { path = "modules/axtask" }
axdma = { path = "modules/axdma" }
axipi = { path = "modules/axipi" }

axio = { version = "0.3.0-pre.1" }
axpoll = "0.1"
cfg-if = "1.0"
chrono = { version = "0.4", default-features = false }
kspin = "0.1"
log = "0.4"
scope-local = "0.1"
spin = "0.10"
rand_core = { version = "0.10.1", default-features = false }
rand_pcg = { version = "0.10.2", default-features = false }

[profile.release]
lto = true

[patch.crates-io]
memory_set = { path = "../crates/memory_set" }
memory_addr = { path = "../crates/memory_addr" }
axfs-ng-vfs = { path = "../crates/axfs-ng-vfs" }
ext4_rs = { path = "../crates/ext4_rs" }
axcpu = { path = "../crates/axcpu" }
axplat-loongarch64-qemu-virt = { path = "../crates/axplat-loongarch64-qemu-virt" }
axplat-riscv64-qemu-virt = { path = "../crates/axplat-riscv64-qemu-virt" }
axio = { path = "../crates/axio" }
page_table_entry = { path = "../vendor/page_table_entry" }
page_table_multiarch = { path = "../crates/page_table_multiarch" }

[patch."https://github.com/arceos-org/allocator.git"]
allocator = { path = "../crates/allocator" }
