[package]
name = "pulse_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axhal = { workspace = true, features = ["paging", "uspace"] }
axlog = { workspace = true }
axconfig = { workspace = true }
axalloc.workspace = true
axtask = { workspace = true, features = ["multitask"] }
axfs.workspace = true
axfs-ng-vfs.workspace = true
axpoll.workspace = true
axmm.workspace = true
axerrno.workspace = true
axio.workspace = true

linux-raw-sys.workspace = true
linkme.workspace = true
kernel-elf-parser.workspace = true
xmas-elf.workspace = true
memory_addr.workspace = true
kernel_guard.workspace = true
spin.workspace = true
bitflags.workspace = true
percpu.workspace = true
starry-vdso.workspace = true
kspin = { version = "0.1" }
