[package]
name = "pulse_syscalls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axhal.workspace = true
axlog.workspace = true
axerrno.workspace = true
axtask = { workspace = true, features = ["multitask"] }
axio = { version = "0.1", features = ["alloc"] }
linkme = "0.3"
memory_addr = { version = "0.4" }
bitflags = "2.11"
spin = "0.10"
syscalls.workspace = true
pulse_core = { path = "../pulse_core" }
arceos_posix_api = { path = "../arceos/api/arceos_posix_api", features = ["fd", "fs", "pipe"] }
