[package]
name = "pulse_syscalls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["irq"]
irq = ["axtask/irq"]

[dependencies]
axalloc.workspace = true
axhal.workspace = true
axlog.workspace = true
axerrno.workspace = true
axtask = { workspace = true, features = ["multitask"] }
axio.workspace = true
axfs.workspace = true
axfs-ng-vfs.workspace = true
linkme.workspace = true
memory_addr.workspace = true
bitflags.workspace = true
spin.workspace = true
linux-raw-sys = { workspace = true, features = ["system"] }
pulse_core = { path = "../pulse_core" }
rand_core.workspace = true
rand_pcg.workspace = true
chrono.workspace = true

[target.'cfg(target_arch = "riscv64")'.dependencies]
syscalls = { workspace = true, features = ["riscv64"] }

[target.'cfg(target_arch = "loongarch64")'.dependencies]
syscalls = { workspace = true, features = ["loongarch64"] }
